Source/WebCore/dom/Element.h
@@ -151,10 +151,10 @@ public:
     void scrollByLines(int lines);
     void scrollByPages(int pages);
 
-    int offsetLeft();
-    int offsetTop();
-    int offsetWidth();
-    int offsetHeight();
+    virtual int offsetLeft();
+    virtual int offsetTop();
+    virtual int offsetWidth();
+    virtual int offsetHeight();
     Element* offsetParent();
     int clientLeft();
     int clientTop();
@@ -384,6 +384,7 @@ protected:
     
     void idAttributeChanged(Attribute*);
 
+    static int adjustForLocalZoom(int value, RenderObject* renderer);
 private:
     void scrollByUnits(int units, ScrollGranularity);
 
