Source/WebCore/html/HTMLMediaElement.h
@@ -203,6 +203,12 @@ public:
 
     bool isPlaying() const { return m_playing; }
 
+    // Override Element implementations
+    virtual int offsetLeft();
+    virtual int offsetTop();
+    virtual int offsetWidth();
+    virtual int offsetHeight();
+
 protected:
     HTMLMediaElement(const QualifiedName&, Document*);
     virtual ~HTMLMediaElement();
